# rollbar-haskell

./: .env  .gitignore  .project-settings.yaml  .project-settings.yml  LICENSE  README.md  compose.override.github.yml  compose.yaml  compose.yml  package.yaml  rollbar.cabal  stack-ghc-9.6.yaml  stack.yaml
.github/workflows/: haskell.yml  main.yaml  main.yml
.vim/: haskell-language-server-wrapper
scripts/: bootstrap  build  build-library  format-repo  release  test-all
scripts/lib/: run-in-container.sh
src/: Rollbar.hs
src/Rollbar/: MonadLogger.hs
