name:                rollbar
version:             0.2.1
synopsis:            error tracking through rollbar.com
-- description:         
homepage:            https://github.com/docmunch/rollbar-haskell
license:             MIT
author:              Daggerboard Inc. Greg Weber
maintainer:          Greg Weber <greg@gregweber.info>
copyright:           Daggerboard Inc. makers of docmunch.com
category:            Logging
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options: -Wall

  exposed-modules:     Rollbar, Rollbar.MonadLogger
  -- other-modules:       
  build-depends:
      base >=4.6 && < 5
    , text
    , aeson
    , vector
    , network
    , basic-prelude
    , monad-control
    , http-conduit

  hs-source-dirs:      src

source-repository head
  type:     git
  location: git://github.com/docmunch/rollbar-haskell.git
