name:                rollbar
version:             1.1.0
synopsis:            error tracking through rollbar.com
-- description:
homepage:            https://github.com/azara/rollbar-haskell
license:             MIT
author:              Daggerboard Inc. Greg Weber, Azara Solutions Inc. Jeff Taggart
maintainer:          Azara <engineering@azara.io>, Jeff Taggart <jeff@jetaggart.com>, Steven MacCoun <theraccoun@gmail.com>
copyright:           Daggerboard Inc. makers of docmunch.com, Azara Solutions Inc.
category:            Logging
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options: -Wall

  exposed-modules:     Rollbar, Rollbar.MonadLogger
  -- other-modules:
  build-depends:
      base >=4.6 && < 5
    , text
    , aeson
    , vector
    , network
    , basic-prelude
    , monad-control
    , resourcet
    , http-conduit
    , lifted-base

  hs-source-dirs:      src

source-repository head
  type:     git
  location: git://github.com/azara/rollbar-haskell.git
